--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');*,
+@import url("https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap");
+*,
 ::after,
 ::before {
   margin: 0;
@@ -7,7 +8,7 @@
 }
 
 body {
-  font-family: 'Bruno Ace SC', sans-serif;  
+  font-family: "Bruno Ace SC", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,7 +23,7 @@ canvas {
 }
 
 button {
-  background-color: gray;
+  background-color: blue;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -30,11 +31,11 @@ button {
   display: inline-block;
   font-size: 16px;
   border-radius: 15px;
-  font-family: 'Bruno Ace SC', Arial, Helvetica, sans-serif;  
+  font-family: "Bruno Ace SC", Arial, Helvetica, sans-serif;
   cursor: pointer;
 }
 
 p {
   font-size: 20px;
-  font-family: 'Bruno Ace SC', Arial, Helvetica, sans-serif;  
+  font-family: "Bruno Ace SC", Arial, Helvetica, sans-serif;
 }
